tests/e2e/not_allowed/static.error
Error: syntax error in story at line 1, column 1

1|    static = 1
      ^^^^^^

E0030: `static` is reserved for future use
